# document-analyzer-with-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
app/: config.py  errors.py  ingestion.py  main.py  service.py
app/extraction/: __init__.py  llm.py  pipeline.py
app/models/: __init__.py  extraction_result.py  extraction_schema.py  telemetry.py
app/retrieval/: __init__.py  agentic.py  base.py  dense.py  factory.py  hybrid.py  reranker.py
app/services/: __init__.py  ingestion_langchain.py  rag_langchain.py
app/telemetry/: __init__.py  logging.py  pricing.py  tracker.py
config/: pricing.json
eval/: compare.py  db.py  ground_truth.json  metrics.py  run_eval.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_config.py  test_ingestion_tables.py  test_metrics.py  test_pricing.py  test_schema.py
